--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,8 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
   host: localhost
-  #username: rails
-  #password: 5
-  #<%= ENV['APP_DATABASE_PASSWORD'] %>
+  username: rails
+  password: <%= ENV['APP_DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
@@ -24,5 +23,4 @@ production:
   <<: *default
   database: curve_production
   username: rails
-  password: 5
-  #<%= ENV['APP_DATABASE_PASSWORD'] %>
+  password: <%= ENV['APP_DATABASE_PASSWORD'] %>
