--- a/config/redis/cable.yml
+++ b/config/redis/cable.yml
@@ -1,6 +1,6 @@
 # Action Cable uses Redis to administer connections, channels, and sending/receiving messages over the WebSocket.
 production:
-  url: redis://localhost:6379/1
+  url: redis://localhost:6379
   host: localhost
   port: 6379
   timeout: 1
