--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,13 +6,13 @@ upstream puma {
 server {
   listen 80;
 # default_server deferred;
-  server_name _;
-#  return 301 $scheme://$server_name$request_uri;
+  server_name curve-app.com;
+   return 301 https://$server_name$request_uri;
 #  rewrite ^/(.*) https://curve-app.com/$1 permanent;
-  root /home/deploy/apps/curve/current/public;
+  #root /home/deploy/apps/curve/current/public;
  # access_log /home/deploy/apps/curve/current/log/nginx.access.log;
  # error_log /home/deploy/apps/curve/current/log/nginx.error.log info;
-  
+
  # index index.htm index.html;
 
   #location ^~ /assets/ {
@@ -20,33 +20,33 @@ server {
   #  expires max;
   #  add_header Cache-Control public;
  # }
-  
-  location / {
-            try_files $uri/index.html $uri.html $uri @puma;
-        }
+
+  #location / {
+  #          try_files $uri/index.html $uri.html $uri @puma;
+  #      }
 
  # try_files $uri/index.html $uri @puma;
-  location @puma {
-        proxy_pass http://puma;    
-proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-
-    
-proxy_set_header        X-Real-IP       $remote_addr;
-client_max_body_size    10m;
-client_body_buffer_size 128k;
-proxy_connect_timeout   90;
-proxy_send_timeout      90;
-proxy_read_timeout      90;
-proxy_buffers           32 4k;
+  #location @puma {
+  #      proxy_pass http://puma;
+#proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#    proxy_set_header Host $http_host;
+#    proxy_redirect off;
 
 
-  }
+#proxy_set_header        X-Real-IP       $remote_addr;
+#client_max_body_size    10m;
+#client_body_buffer_size 128k;
+#proxy_connect_timeout   90;
+#proxy_send_timeout      90;
+#proxy_read_timeout      90;
+#proxy_buffers           32 4k;
+
+
+#  }
 
  # error_page 500 502 503 504 /500.html;
  # client_max_body_size 10M;
-  keepalive_timeout 10;
+#  keepalive_timeout 10;
 }
 server {
 
@@ -87,9 +87,9 @@ server {
     proxy_redirect off;
 
 proxy_pass http://puma;
-proxy_http_version 1.1; 
+proxy_http_version 1.1;
  proxy_set_header Upgrade $http_upgrade;
- proxy_set_header Connection 'upgrade'; 
+ proxy_set_header Connection 'upgrade';
 #proxy_cache_bypass $http_upgrade;
 
 proxy_set_header        X-Real-IP       $remote_addr;
@@ -110,4 +110,3 @@ proxy_buffers           32 4k;
   client_max_body_size 10M;
   keepalive_timeout 10;
 }
-
