--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -83,6 +83,7 @@ server {
         }
 	location @puma {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-PROTO $scheme;
     proxy_set_header Host $host;
     proxy_redirect off;
 
