--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,6 +3,37 @@ upstream puma {
 # cift slash silindi
 }
 
+map $http_upgrade $connection_upgrade {
+   default upgrade;
+   '' close;
+}
+
+upstream appserver {
+   server 46.101.201.98:28080; # appserver_ip:ws_port
+}
+
+server {
+   listen 28080; // client_wss_port
+
+   ssl on;
+   ssl_certificate /home/ozan/curve-app.com.chained.crt;
+   ssl_certificate_key /home/ozan/curve-app.com.key;
+
+ssl_session_timeout 5m;
+ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
+    ssl_prefer_server_ciphers on;
+   ssl_dhparam /home/ozan/dhparams.pem;
+ssl_session_cache shared:ssl_session_cache:10m;
+
+
+   location / {
+       proxy_pass http://appserver;
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection $connection_upgrade;
+   }
+}
 server {
   listen 80;
 # default_server deferred;
@@ -77,6 +108,7 @@ server {
             try_files $uri/index.html $uri.html $uri @puma;
 
    }
+
 
         location ~* ^.+\.(jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|pdf|ppt|txt|tar|mid|midi|wav|bmp|rtf|mp3|flv|mpeg|avi)$ {
                     try_files $uri @puma;
