--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,9 +4,9 @@ upstream puma {
 }
 
 
-#upstream appserver {
-#   server 46.101.201.98:28080; # appserver_ip:ws_port
-#}
+upstream appserver {
+   server 46.101.201.98:28080; # appserver_ip:ws_port
+}
 
 
 server {
@@ -57,7 +57,7 @@ server {
 server {
 
         listen 443 ssl;
-       listen 28080;
+#       listen 28080;
 	server_name curve-app.com;
 #www.curve-app.com;
 
@@ -112,7 +112,7 @@ proxy_buffers           32 4k;
 
   }
   location /cable/ {
-      proxy_pass http://46.101.201.98:28080;
+      proxy_pass http://appserver;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
