--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -111,12 +111,12 @@ proxy_read_timeout      90;
 proxy_buffers           32 4k;
 
   }
-#location /cable/ {
-#      proxy_pass http://appserver;
-#      proxy_http_version 1.1;
-#      proxy_set_header Upgrade $http_upgrade;
-#      proxy_set_header Connection $connection_upgrade;
-#   }
+location /cable/ {
+      proxy_pass http://appserver;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+  }
 #	location ^~ /assets/ {
 #    gzip_static on;
 #    expires max;
