--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -89,6 +89,14 @@ server {
         location ~* ^.+\.(jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|pdf|ppt|txt|tar|mid|midi|wav|bmp|rtf|mp3|flv|mpeg|avi)$ {
                     try_files $uri @puma;
         }
+        location /cable/ {
+              proxy_pass http://appserver;
+              proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection 'upgrade' ;
+              proxy_read_timeout      86400;
+
+          }
 	location @puma {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #devise'da csrf token hatasi almamak icin onemli
@@ -111,12 +119,7 @@ proxy_read_timeout      90;
 proxy_buffers           32 4k;
 
   }
-location /cable/ {
-      proxy_pass http://appserver;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
-  }
+
 #	location ^~ /assets/ {
 #    gzip_static on;
 #    expires max;
