--- a/config/redis/cable.yml
+++ b/config/redis/cable.yml
@@ -1,12 +1,13 @@
 # Action Cable uses Redis to administer connections, channels, and sending/receiving messages over the WebSocket.
 production:
-  url: redis://:ENV["REDIS_PASSWORD"]@localhost:6379
+  url: redis://localhost:6379
   host: localhost
   port: 6379
   timeout: 1
   inline: true
-#  password: ENV["REDIS_PASSWORD"]
-#  url: redis://localhost:6379
+# password: ENV["REDIS_PASSWORD"]
+# url: redis://:ENV["REDIS_PASSWORD"]@localhost:6379
+
 
 development:
   url: redis://localhost:6379/2
