--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -72,8 +72,8 @@ server {
 
         root /home/deploy/apps/curve/current/public;
 	#root /home/deploy/apps/curve/current/public;
-#  access_log /home/deploy/apps/curve/current/log/nginx.access.log;
- # error_log /home/deploy/apps/curve/current/log/nginx.error.log info;
+ access_log /home/deploy/apps/curve/current/log/nginx.access.log;
+ error_log /home/deploy/apps/curve/current/log/nginx.error.log info;
 #        index index.htm index.html;
 
         location / {
