--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -111,7 +111,7 @@ proxy_buffers           32 4k;
   }
 
   location /cable {
-      proxy_pass http://localhost:28080;
+      proxy_pass http://localhost:28080/cable;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "Upgrade";
