--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,6 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  braintree_merchant_id: <%= ENV["BRAINTREE_MERCHANT_ID"] %>
+  braintree_public_key: <%= ENV["BRAINTREE_PUBLIC_KEY"] %>
+  braintree_private_key: <%= ENV["BRAINTREE_PRIVATE_KEY"] %>
